--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,30 @@
+:root {
+  --red: #e50914;
+  --black: #000;
+  --white: #fff;
+  font-size: 14px;
+}
+
+@media screen and (min-width: 876px) {
+  :root {
+    font-size: 16px;
+  }
+}
+
+/* font weight */
+/* 100;300;400;500;700;900 */
+
 * {
   margin: 0;
   box-sizing: border-box;
 }
+
 body {
-  margin: 0;
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: var(--white);
+  background-color: var(--black);
 }
 
 code {
