--- a/src/components/Hero/index.css
+++ b/src/components/Hero/index.css
@@ -4,7 +4,7 @@
     no-repeat center top;
   background-size: cover;
   padding: 150px 5%;
-  min-height: 580px;
+  min-height: 650px;
   display: flex;
   align-items: center;
   position: relative;
@@ -13,15 +13,17 @@
 .hero::after {
   content: '';
   position: absolute;
-  height: 300px;
+  /* height: 300px; */
+  top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   background-image: linear-gradient(
     to top,
     var(--black),
-    rgba(0, 0, 0, 0.5),
-    rgba(0, 0, 0, 0)
+    rgba(0, 0, 0, 0.3),
+    rgba(0, 0, 0, 0.3),
+    rgba(0, 0, 0, 0.9)
   );
 }
 
@@ -58,6 +60,6 @@ button.hero__button:hover {
 
 @media screen and (min-width: 876px) {
   .hero {
-    padding: 150px 100px;
+    padding: 150px 140px;
   }
 }
