--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -7,7 +7,12 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 2;
+  z-index: 3;
+  transition: 350ms;
+}
+
+.nav--active {
+  background-color: var(--black);
 }
 
 .nav__side {
