fix hero size in mobile

--- a/src/components/Hero/index.css
+++ b/src/components/Hero/index.css
@@ -3,7 +3,7 @@
   background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 10rem 5% 8.75rem;
+  padding: 160px 5% 140px;
   min-height: 34.375rem;
   display: flex;
   align-items: center;
